@@ -26,6 +26,10 @@
 #
 # 2015-02-14 Michal Fincham - Version 1.3.1
 #            Corrected unsafe permissions on ~/.nut-monitor (Debian #777706)
+#
+# 2025-03-15 Jim Klimov - Version 2.0.2 (to align with Python3 variant)
+#            Revise localisation, inject PACKAGE_VERSION and NUT_WEBSITE_BASE
+#            into the About dialog contents
 
 
 import gtk, gtk.glade, gobject
