@@ -31,7 +31,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>&lt;h1&gt;NUT-Monitor 1.3.1&lt;/h1&gt;
+         <string>&lt;h1&gt;NUT-Monitor 2.0.2&lt;/h1&gt;
 &lt;p&gt;GUI to manage devices connected to a NUT server.&lt;br/&gt;
 Provided with NUT version @PACKAGE_VERSION@.&lt;/p&gt;
 &lt;p style=&quot; font-size:8pt;&quot;&gt;Copyright (C) 2010 David Goncalves&lt;br/&gt;
