@@ -1021,9 +1021,9 @@ want to delete from list...
     <property name="window_position">center-always</property>
     <property name="type_hint">normal</property>
     <property name="program_name">NUT-Monitor</property>
-    <property name="version">1.3.1</property>
+    <property name="version">2.0.2</property>
     <property name="copyright" translatable="yes">Copyright (c) 2010 David Goncalves, Copyright (c) since 2010 by NUT Community</property>
-    <property name="comments" translatable="yes">"&lt;h1&gt;NUT-Monitor 1.3.1&lt;/h1&gt;\n"
+    <property name="comments" translatable="yes">"&lt;h1&gt;NUT-Monitor 2.0.2&lt;/h1&gt;\n"
 "&lt;p&gt;GUI to manage devices connected to a NUT server.&lt;br/&gt;\n"
 "Provided with NUT version @PACKAGE_VERSION@.&lt;/p&gt;\n"
 "&lt;p style=&quot; font-size:8pt;&quot;&gt;Copyright (C) 2010 David Goncalves&lt;br/&gt;\n"
